<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Beeback</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_configuracao">configuracao</string>
	<color name="actionBarColor">#D0D0D0</color>
	<color name="background">#FFFFFF</color>
	<color name="login_title">#3399FF</color>
	<color name="high">#FF0000</color>
	<color name="important">#FFC3B01A</color>
	<color name="none">#FFFFFF</color>
	<color name="details_separator">#330099</color>
	<color name="date_list">#A0A0A0</color>
	<color name="separator_list">#BDBDBD</color>
	<color name="title_list">#484848</color>
	<string name="action_adicionar">adicionar</string>
	<string name="action_pesquisar">pesquisar</string>
	<string name="action_profile">perfil</string>
	<string name="login">Log in</string>
	<string name="beeback_title">Beeback Gestão de Tarefas</string>
	<string name="entrar">entrar</string>
	<string name="username">usuário</string>
	<string name="password">senha</string>
	<string name="label_task_date">data da tarefa</string>
	<string name="hint_task_test">Digite sua tarefa</string>
</resources>
