<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    

    <item
	       android:id="@+id/action_add"
	       android:showAsAction="ifRoom"
	       android:icon="@drawable/ic_actionbar_add"
	       android:title="@string/action_adicionar"/>
       
       <item
	       android:id="@+id/action_search"
	       android:icon="@drawable/ic_actionbar_search"
	       android:title="@string/action_pesquisar"
	       android:showAsAction="always"
          android:actionViewClass="android.widget.SearchView"/>
       
       <item
           android:id="@+id/action_profile"
           android:title="@string/action_profile" />
       
       <item
           android:id="@+id/action_setting"
           android:title="@string/action_configuracao"/>
    
</menu>
